# ogreExample

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  resourceDir.rg.in
include/raisim/: OgreVis.hpp  RaiSimVisualizerOgre.hpp  RsVisualizerFilament.hpp  interfaceClasses.hpp
rsc/font/open-sans/: OpenSans.fontdef
rsc/model/monkey/: monkey_obj2.material
rsc/model/primitives/: sphere_obj.material  sphere_obj.mesh
rsc/pbr/: rsPBR.material
rsc/texture/gravel/: gravel.material
src/: OgreVis.cpp  RaiSimVisualizerOgre.cpp  RsVisualizerFilament.cpp
